--- a/vignettes/dec_tree_Doubilet_1985_example.Rmd
+++ b/vignettes/dec_tree_Doubilet_1985_example.Rmd
@@ -71,44 +71,44 @@ mygmod <- gmod() +
   decisions("BrainBiopsy", "NoBiopsy_Treat", "NoBiopsy_NoTreat") + 
   #final_outcomes("DEAD","SEVSEQHSE","MODSEQHSE","MLDSEQHSE") + 
   event(name = "Biopsy",  
-                results = c(TRUE, FALSE), 
+                scenarios = c(TRUE, FALSE), 
                 probs = c(pBiopsy(decision), Inf), 
                 outcomes = c("dieBiop", "HSE"))  + 
   event(name = "dieBiop",  
-                results = c(TRUE, FALSE), 
+                scenarios = c(TRUE, FALSE), 
                 probs = c(pDieBiopsy, Inf), 
                 outcomes = c("DEAD", "sevBiopSeq"))  + 
   event(name = "sevBiopSeq",  
-                results = c(TRUE, FALSE), 
+                scenarios = c(TRUE, FALSE), 
                 probs = c(pSevBiopsy, Inf), 
                 outcomes = c("HSE", "modBiopSeq"))  + 
   event(name = "modBiopSeq",  
-                results = c(TRUE, FALSE), 
+                scenarios = c(TRUE, FALSE), 
                 probs = c(pModBiopsy, Inf), 
                 outcomes = c("HSE", "HSE"))  + 
   event(name = "HSE",  
-                results = c(TRUE, FALSE), 
+                scenarios = c(TRUE, FALSE), 
                 probs = c(pHSE, Inf), 
                 outcomes = c("BiopAvail", "BiopAvail"))  +
   event(name = "BiopAvail",  
-                results = c(TRUE, FALSE), 
+                scenarios = c(TRUE, FALSE), 
                 probs = c(pBiopsy(decision), Inf), 
                 outcomes = c("BiopRes", "die"))  + 
   event(name = "BiopRes",  
-                #results = c("Positive", "Negative"), 
-                results = c(TRUE, FALSE), 
+                #scenarios = c("Positive", "Negative"), 
+                scenarios = c(TRUE, FALSE), 
                 probs = c(pBiopRes(HSE), Inf), 
                 outcomes = c("die", "die"))  + 
   event(name = "die",  
-                results = c(T, F), 
+                scenarios = c(T, F), 
                 probs = c(pEvent(HSE, decision, BiopRes, pDieHSE, pDieNoHSE, fDie, addProbDie), Inf), 
                 outcomes = c("DEAD", "sevSeqHSE")) +
   event(name = "sevSeqHSE",  
-                results = c(T, F), 
+                scenarios = c(T, F), 
                 probs = c(pEvent(HSE, decision, BiopRes, pSevHSE, pSevNoHSE, fSev, addProbSev), Inf), 
                 outcomes = c("SEVSEQHSE", "modSeqHSE")) +
   event(name = "modSeqHSE",  
-                results = c(T, F), 
+                scenarios = c(T, F), 
                 probs = c(pEvent(HSE, decision, BiopRes, pModHSE, pModNoHSE, fMod, addProbMod), Inf), 
                 outcomes = c("MODSEQHSE", "MLDSEQHSE")) + 
   payoffs(util = util(decision, final_outcome, sevBiopSeq, modBiopSeq))
