--- a/vignettes/gmod_advanced_markov_tutorial.Rmd
+++ b/vignettes/gmod_advanced_markov_tutorial.Rmd
@@ -37,18 +37,17 @@ library(magrittr)
 NEW Syntax using layers = twigs
 
 ```{r}
-n_cycles <- 10
 mygmod <- gmod() + # for illustration it is 75 in the tutorial 
   decisions("StandardOfCare", "StrategyA", "StrategyB", "StrategyAB") + 
   states(names=c("H", "S1", "S2", "D"), 
          init_probs=c(1,0,0,0),
          max_cycle_in_states=c(1,n_cycles,1,1)) + 
   event(name = "die",  
-        results = c(T, F), 
+        scenarios = c(T, F), 
         probs = c(pDie(state, cycle, cycle_in_state), Inf), 
         outcomes = c("D", "get_event")) +  
   event(name = "get_event",  
-        results = c("recover", "getsick", "progress", "stay"), 
+        scenarios = c("recover", "getsick", "progress", "stay"), 
         probs = c(pRecover(state), 
                   pGetSick(state), 
                   pProgress(state, decision, cycle_in_state), 
@@ -60,28 +59,6 @@ mygmod <- gmod() + # for illustration it is 75 in the tutorial
 
 ```
 
-
-```{r}
-# mygmod <- gmod(model_type = "Markov", n_cycles = 5) + # for illustration it is 75 in the tutorial 
-#   decisions("StandardOfCare", "StrategyA", "StrategyB", "StrategyAB") + 
-#   states("H", "S1", "S2", "D") + 
-#   tunnels(states = c("S1", "S2"), lengths = c(NA, NA)) + 
-#   discounts(payoffs = c("cost", "utility"), discounts = c(0.03, 0.03)) + 
-#   initial_probs(states = "H", probs = 1) +
-#   event_mapping(event = "die",  
-#               values = c(T, F), 
-#               probs = c(pDie(state, cycle, cycle_in_state), Inf), 
-#               outcomes = c("D", "get_event")) +  
-#   event_mapping(event = "get_event",  
-#                 values = c("recover", "getsick", "progress", "stay"), 
-#                 probs = c(pRecover(state), 
-#                           pGetSick(state), 
-#                           pProgress(state, decision, cycle_in_state), 
-#                           Inf), 
-#                 outcomes = c("H", "S1", "S2", "curr_state")) +  
-#   payoffs(cost = cost(state, decision, get_event, die), 
-#           utility = utility(state, decision, get_event))
-```
 
 The `gmod()` function defines the model type as a Markov model and number of cycles as 75. The `decision()` function defines the treatment strategies.  The `initial_probs()` defines the initial probabilities. Here we only define the "Moderate" states as the starting state with probability equals 1. The other states will be set to 0. 
 
@@ -348,6 +325,7 @@ model_struc <- gmod_gen_model_function(mygmod, n_cycles)
 
 model_results <- my_markov_model(model_struc, params, return_trace = T)
 dim(model_results$Trace)
+model_results
 ```
 
 ## simplified version 
