--- a/vignettes/gmod_intro_markov_tutorial.Rmd
+++ b/vignettes/gmod_intro_markov_tutorial.Rmd
@@ -173,11 +173,12 @@ The output is the structure of the model including the formulae.
 To evaluate the model, we run `gmod_evaluate()` which returns the numerical outcomes. 
 The model structure can also be returned directly from the 
 ```{r}
-model_struc <- gmod_gen_model_function(mygmod, n_cycles=75)
+model_struc <- gmod_gen_model_function(mygmod)
 #model_res
 ```
 
 ```{r}
+n_cycles <- 75
 model_res <- my_markov_model(model_struc, params, return_trace = T)
 ```
 
