--- a/vignettes/gmod_intro_markov_tutorial.Rmd
+++ b/vignettes/gmod_intro_markov_tutorial.Rmd
@@ -81,8 +81,8 @@ The model has six user-defined functions: four for computing probabilities `pRec
 probability of recover is only dependent on state being S1 otherwise is 0.  Following the tutorial, we convert the rate of recover r_S1H to a probability by using the function rate2prob().
 ```{r}
 pRecover <- function(state){
-  rRecover <- if (state=="S1") r_S1H else 0
-  rate2prob(rRecover)
+  r_S1H * (state=="S1") %>%
+    rate2prob(rRecover)
 }
 ```
 This is a standard function and can be evaluated like any other function.  For example, we can type
@@ -95,16 +95,16 @@ This is a standard function and can be evaluated like any other function.  For e
 probability of getting sick is also a function of a single state "H" otherwise is 0.
 ```{r}
 pGetSick <- function(state){
-  rGetSick <- if (state=="H") r_HS1 else 0
-  rate2prob(rGetSick)
+  r_HS1 * (state=="H")  %>%
+    rate2prob(rGetSick)
 }
 ```
 
 probability of progress is slightly more complex as it is a function of both the state and the decision.  
 ```{r}
 pProgress <- function(state, decision){
-  hr_S1S2 <- if (decision %in% c("StrategyB", "StrategyAB")) hr_S1S2_trtB else 1
-  rProgress <- (state=="S1") * r_S1S2 * hr_S1S2
+  r_S1S2 * (state=="S1") * # progress only in S1
+    hr_S1S2_trtB ^ (decision %in% c("StrategyB", "StrategyAB")) %>% # hazard ratio if deicsion has B in it
   rate2prob(rProgress)
 }
 ```
@@ -123,12 +123,17 @@ if (state=="S1") TRUE else FALSE
 Probability of death is a function of the state. For states S1 and S2 the rate of mortality is relative to the healthy rate multiplied by a hazard ratio for each state.
 ```{r}
 pDie <- function(state){
-  rDie <- switch(state, 
-         "H" = r_HD,
-         "S1" = r_HD*hr_S1,
-         "S2" = r_HD*hr_S2,
-         "D" = Inf) #translates to probability of 1
-  rate2prob(rDie)
+  r_HD*(state != "D") * # background rate of  death if not already dead
+    hr_S1 ^ (state == "S1") * # HR S1 if state == S1
+    hr_S2 ^ (state == "S2") %>% # HR S2 if state == S2
+    rate2prob()
+  
+  # rDie <- switch(state, 
+  #        "H" = r_HD,
+  #        "S1" = r_HD*hr_S1,
+  #        "S2" = r_HD*hr_S2,
+  #        "D" = Inf) #translates to probability of 1
+  # rate2prob(rDie)
 }
 ```
 
@@ -136,34 +141,47 @@ The payoffs are a cost and utility function. Both are dependent on both the stat
 ```{r}
 cost <- function(state, decision){
   # cost of decision is only applied if the state is either S1 or S2
-  if (state %in% c("S1","S2")){
-    c_decision <- switch(decision,
-                        "StandardOfCare" = 0,
-                        "StrategyA" = c_trtA ,
-                        "StrategyB" = c_trtB,
-                        "StrategyAB" = c_trtA + c_trtB)}
-  else {
-    c_decision <- 0
-  }
-  # cost of the state is a function of the state
-  c_state <- switch(state, 
-         "H" = c_H,
-         "S1" = c_S1,
-         "S2" = c_S2,
-         "D" = c_D)
-  # combine both
-  return(c_decision + c_state)
+  # if (){
+  #   c_decision <- switch(decision,
+  #                       "StandardOfCare" = 0,
+  #                       "StrategyA" = c_trtA ,
+  #                       "StrategyB" = c_trtB,
+  #                       "StrategyAB" = c_trtA + c_trtB)}
+  # else {
+  #   c_decision <- 0
+  # }
+  # # cost of the state is a function of the state
+  # c_state <- switch(state, 
+  #        "H" = c_H,
+  #        "S1" = c_S1,
+  #        "S2" = c_S2,
+  #        "D" = c_D)
+  # # combine both
+  # return(c_decision + c_state)
+  
+  c_trtA * (state %in% c("S1","S2") & decision %in% c("StrategyA","StrategyAB")) + 
+    c_trtB * (state %in% c("S1","S2") & decision %in% c("StrategyB","StrategyAB")) + 
+    c_H * (state == "H") + 
+    c_S1 * (state == "S1") + 
+    c_S2 * (state == "S2") + 
+    c_D * (state == "D")
+    
 }
 ```
 
 Similarly the utility function is a function of the state and decision. For H, S2 and D, the utility is independent of the decision. But, Strategies involving "A" improve the utility of S1 from u_S1 to u_trtA. One way to code this is:
 ```{r}
 utility <- function(state, decision){
-  u_state <- switch(state, 
-         "H" = u_H,
-         "S1" = if (decision %in% c("StrategyA", "StrategyAB")) u_trtA else u_S1,
-         "S2" = u_S2,
-         "D" = u_D)
+  # u_state <- switch(state, 
+  #        "H" = u_H,
+  #        "S1" = if (decision %in% c("StrategyA", "StrategyAB")) u_trtA else u_S1,
+  #        "S2" = u_S2,
+  #        "D" = u_D)
+  u_H * (state == "H") + 
+    u_S1 * (state == "S1" & decision %not_in% c("StrategyA", "StrategyAB")) + 
+    u_trtA * (state == "S1" & decision %in% c("StrategyA", "StrategyAB")) + 
+    u_S2 * (state == "S2") + 
+    u_D * (state == "D")
 }
 ```
 
